k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-web
  namespace: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-web
  template:
    metadata:
      labels:
        app: portfolio-web
    spec:
      containers:
        - name: web
          image: rupalsoni123/portfolio:latest   # or your-registry/portfolio:v1
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
